clusters/cl01tl/manifests/web-assets/Service-web-assets-web-assets-remote-rclone.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-assets-web-assets-remote-rclone
  labels:
    app.kubernetes.io/instance: web-assets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: web-assets-remote-rclone
    app.kubernetes.io/service: web-assets-web-assets-remote-rclone
    app.kubernetes.io/version: v1.75.1
    helm.sh/chart: rclone-web-assets-remote-2.1.4
  namespace: web-assets
spec:
  type: ClusterIP
  ports:
    - port: 5572
      targetPort: 5572
      protocol: TCP
      name: rc-sync
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: web-assets
    app.kubernetes.io/name: web-assets-remote-rclone
