clusters/cl01tl/manifests/web-assets/HTTPRoute-web-assets-cluster-b.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-assets-cluster-b
  namespace: web-assets
  labels:
    app.kubernetes.io/name: web-assets-cluster-b
    app.kubernetes.io/instance: web-assets
    app.kubernetes.io/part-of: web-assets
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "web-assets.alexlebens.dev"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: Host
                value: "web-assets.b.s3.alexlebens.dev"
      backendRefs:
        - group: ""
          kind: Service
          name: cluster-b
          namespace: garage-b
          port: 3902
          weight: 1
